<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btnMass"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/btnMass"
        android:elevation="2dp"
        android:padding="10dp"
        android:scaleType="fitStart"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLen"
        app:srcCompat="@drawable/ic_baseline_balance_24" />

    <ImageButton
        android:id="@+id/btnLen"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/btnLen"
        android:elevation="2dp"
        android:padding="10dp"
        android:scaleType="fitStart"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_square_foot_24" />

    <ImageButton
        android:id="@+id/btnData"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/btnData"
        android:elevation="2dp"
        android:padding="10dp"
        android:scaleType="fitStart"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTemp"
        app:srcCompat="@drawable/ic_baseline_memory_24" />

    <ImageButton
        android:id="@+id/btnTemp"
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@color/purple_500"
        android:contentDescription="@string/btnTemp"
        android:elevation="2dp"
        android:padding="10dp"
        android:scaleType="fitStart"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMass"
        app:srcCompat="@drawable/ic_baseline_device_thermostat_24" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btnLen"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btnMass"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btnTemp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btnData"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>